--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "git-commit-msg-linter": "^5.0.4"
-  },
   "devDependencies": {
     "@types/node": "^20.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "git-commit-msg-linter": "^5.0.4",
     "typescript": "^5.0.4"
   }
 }
