--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm run test -- --watch -c jest-unit-config.js",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.1.4",
@@ -34,12 +36,14 @@
     "husky": "^8.0.0",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
+    "sucrase": "^3.32.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "validator": "^13.9.0"
   }
