--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.5.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.1.4",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
@@ -37,6 +38,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "sucrase": "^3.32.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
