--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,13 @@
     "outDir": "./dist",
     "module": "commonjs",
     "target": "es2022",
-    "esModuleInterop": true,
-    "allowJs": true
-  }
+    "esModuleInterop": true
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
