chore: add engines with node version

--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "validator": "^13.9.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
