--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/main/server.js",
     "build": "rimraf dist && tsc",
-    "debug": "node --inspect=0.0.0.0:9222  -nolazy dist/main/server.js",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222  -nolazy ./dist/main/server.js",
+    "debug:watch": "tsc -w",
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
@@ -14,7 +15,7 @@
     "test:unit": "npm run test -- --watch -c jest-unit-config.js",
     "test:integration": "npm run test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage",    
+    "test:ci": "npm test -- --coverage",
     "lint-staged": "lint-staged"
   },
   "keywords": [],
@@ -36,7 +37,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "git-commit-msg-linter": "^5.0.4",    
+    "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "rimraf": "^5.0.1",
@@ -50,8 +51,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
+    "nodemon": "^2.0.22",
     "validator": "^13.9.0"
-  },  
+  },
   "engines": {
     "node": "18.x"
   }
