chore: add git commit msg linter with husky hook

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:integration": "npm run test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "lint-staged": "lint-staged"
+    "pre-commit": "lint-staged"
   },
   "keywords": [],
   "author": "",
