--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
+    "mockdate": "^3.0.5",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
