--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/main/server.js",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222  -nolazy ./dist/main/server.js",
     "debug:watch": "tsc -w",
     "up": "npm run build && docker-compose up -d",
@@ -51,11 +51,15 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.3",
     "mongodb": "^5.5.0",
     "nodemon": "^2.0.22",
     "validator": "^13.9.0"
   },
   "engines": {
     "node": "18.x"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
