--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,5 +7,12 @@
     "remoteRoot": "/usr/src/clean-node-api",
     "port": 9222,
     "restart": true
+  },
+  {
+    "type": "node",
+    "request": "attach",
+    "name": "Attach to Node",
+    "port": 9222,
+    "restart": true
   }]
 }
