--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.4",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
@@ -54,6 +55,7 @@
     "module-alias": "^2.2.3",
     "mongodb": "^5.5.0",
     "nodemon": "^2.0.22",
+    "swagger-ui-express": "^4.6.3",
     "validator": "^13.9.0"
   },
   "engines": {
