docs: update login api docs

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "pre-commit": "lint-staged"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Sérgio Fernandes",
+  "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
