--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Sérgio Fernandes",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
@@ -56,7 +57,7 @@
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.3",
     "mongodb": "^5.5.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "swagger-ui-express": "^4.6.3",
     "validator": "^13.9.0"
   },
