--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.3",
+    "mongo-round": "^1.0.0",
     "mongodb": "^5.5.0",
     "nodemon": "^3.0.1",
     "swagger-ui-express": "^4.6.3",
