--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug:watch": "tsc -w",
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down",
+    "check": "npm-check -s -u",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm run test -- --watch -c jest-unit-config.js",
@@ -27,39 +28,39 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.1.4",
+    "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.17",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.40.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint": "^8.46.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^5.0.4",
-    "jest": "^29.5.0",
-    "lint-staged": "^13.2.2",
+    "jest": "^29.6.2",
+    "lint-staged": "^13.2.3",
     "mockdate": "^3.0.5",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "module-alias": "^2.2.3",
     "mongo-round": "^1.0.0",
-    "mongodb": "^5.5.0",
+    "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
-    "swagger-ui-express": "^4.6.3",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.9.0"
   },
   "engines": {
