--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/method-signature-style": "off",
     "@typescript-eslint/no-misused-promises": "off",
-    "@typescript-eslint/no-namespace": "off"
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/return-await": "off"
   }
 }
