--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "bson-objectid": "^2.0.4",
     "copyfiles": "^2.4.1",
     "eslint": "^8.46.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
