--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
@@ -55,8 +56,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
     "module-alias": "^2.2.3",
     "mongo-round": "^1.0.0",
