--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.0",
+    "@graphql-tools/utils": "^10.0.5",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
-    "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.22.2",
     "jsonwebtoken": "^9.0.1",
     "module-alias": "^2.2.3",
     "mongo-round": "^1.0.0",
