--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
     "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.10",
+    "@types/node": "^20.5.0",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
     "bson-objectid": "^2.0.4",
     "copyfiles": "^2.4.1",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.6.2",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "^14.0.0",
     "mockdate": "^3.0.5",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
